--- a/src/Projects/Project.scss
+++ b/src/Projects/Project.scss
@@ -5,34 +5,8 @@
 
    height: 100vh;
  }
- .heading{
-   padding: 20px;
-   text-align: center;
- }
- .heading h2{
-   font-size: 1.2rem;
-   padding-bottom:10px ;
-   color:rgb(177, 177, 197);
-   @media screen and (max-width: 900px) {  
-       font-size: 1.2rem;      
-    }
-}
- .heading h1{
-   font-size: 1.5rem;
-   padding-bottom:10px ;
-   color: white;
-   @media screen and (max-width: 900px) {  
-       font-size: 1.2rem;      
-    }
-}
-.slide{
-  visibility: hidden;
-  display: none;
-  @media screen and (max-width: 900px) {  
-   visibility: visible;  
-   display: inline; 
-}
-}
+
+
 
 .each-slide-effect > div {
    display: flex;
@@ -53,29 +27,49 @@
 
  }
  .project-content{
-   width:100%;
-   height: 86%;
-  //  background-color: aqua;
-   display: grid;
-   grid-template-columns: auto auto auto auto auto;
-   @media screen and (max-width: 900px) {  
-    display: flex;
-    flex-direction: row;  
-   }
+   align-items: center;
+   justify-content: center;
+   align-content: center;
+   text-align: center;
+   width: 100%;
+   height: 100%;
+   padding-top: 40vh;
+   padding-left:20vw;
+  
+ }
+ .content{
+  background-color: rgb(0, 0, 0);
+  opacity: 0.6;
+  padding: 10vh;
+ }
+ .content .words{
+  color: #efefef;
+  font-weight: bold;
+ }
+ .content .button{
+  padding: 10px;
+  font-weight: bold;
+  border-radius: 10px;
+  border: 1px solid yellow;
  }
 
  .select{
-  position: relative;
-  overflow: hidden;
-  transition: 0.35s;
-  clip-path:inset(0 0%);
-  
+  // position: relative;
+  // overflow: hidden;
+  // transition: 0.35s;
+  // clip-path:inset(0 0%);
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+ }
+ .select img{
+  width: 100%;
  }
  
- .select:hover{
+//  .select:hover{
    
-  transform:scaleX(2);
+//   transform:scaleX(2);
     
   
- }
+//  }
 
