--- a/src/main/comments/comment.scss
+++ b/src/main/comments/comment.scss
@@ -24,76 +24,6 @@
       font-size: 1.2rem;      
    }
 }
-.each-slide-effect{
-  height: 100%;
+.images .img:hover{
+  opacity: 1.6;
 }
-
-  
-  .each-slide-effect > div {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     padding: 10vh;
-    //  background-size: cover;
-     height: 100vh;
-    
-   }
-   
-   .each-slide-effect .cont {
-     padding: 10px;
-     padding-left: 50px;
-     padding-right: 50px;
-    //  font-size: 20px;
-    //  background:red;
-     text-align: center;
-    //  max-width: 200px;
-     height: 100%;
-   }
-   .each-slide-effect h1{
-    color:white;
-    padding: 10px;
-   }
-  
-   .each-slide-effect .slide-image{
-    width: 500px;
-    border-radius: 50%;
-    @media screen and (max-width: 900px) {  
-      width: 300px;     
-   }
-   }
-   .each-slide-effect .cont p{
-    word-wrap:break-word;
-    padding: 20px;
-    color: white;
-    
-   }
-   
-   .passage{
-    width:100%;
-    height: 30vh;
-    background-image: url('../../assets/image.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    // background-position: fixed;
-    background-position: top center;
-    // position: relative;
-   
-    // height: 100vh;
-   }
-   .main-cont{
-    height: 100vh;
-   }
-   
-   
-
-  //  .passage::after {
-  //    content: '';
-  //    position: absolute;
-  //    left: 0;
-  //    top: 0;
-  //    height: 10%;
-  //    width: 100%;
-  //    background-color: #020202;
-  //    opacity: 0.7;
-  //    // z-index: 1;
-  //  }
