--- a/src/main/header/header.scss
+++ b/src/main/header/header.scss
@@ -6,7 +6,8 @@
 .main{
  width:100%;
  height: 100%;
- background-image: url('../../assets/image.jpg');
+ background-color: #020202;
+//  background-v
  background-size: cover;
  background-attachment: fixed;
  background-position: fixed;
@@ -32,28 +33,35 @@
     justify-content: center;
     flex-wrap: wrap; 
     @media screen and (max-width: 800px) {  
-        padding-top: 150px;      
+        // padding-top: 150px;      
      }
     
 }
-.main .info_content{
 
-    padding-right: 50px;
-}
 .info .info_content img{
     width: 50vw;   
     
 }
 
 .info_buttons{
+    display: flex;
+    flex-direction: column;
     padding-top: 15vh;
     z-index: 2;
     align-items: center;
     justify-content: center;
     // background-color: aqua;
+    @media screen and (max-width: 800px) {  
+        padding-top: 25vh;     
+     }
 }
 .info_buttons img{
     width: 20vw;
+    padding-left: 30px;
+
+    @media screen and (max-width: 900px) {  
+        width: 25vh;     
+     }
 }
 .info_buttons .button{
     width: 250px;
@@ -71,7 +79,7 @@
 }
 .videoTag{
     position:absolute;
-    width: 100vw;
+    // width: 100vw;
     height: 100vh;
 }
 
